# ThermoSoft-rs

./: Cargo.toml  Embed.toml  README.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/max31856/: lib.rs  mod.rs  registers.rs
