[package]
edition = "2024"
name = "ThermoSoft-rs"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.5"
defmt = { version = "1.0.1", optional = true }
defmt-rtt = { version = "1.1.0", optional = true }
embassy-executor = { version = "0.9.1", features = [
    "arch-cortex-m",
    "executor-thread",
] }
embassy-futures = "0.1.2"
embassy-stm32 = { version = "0.4.0", features = [
    "stm32h563zi",
    "memory-x",
    "time-driver-any",
    "exti",
] }
embassy-sync = { version = "0.7.2" }
embassy-time = { version = "0.5.0", features = ["tick-hz-32_768"] }
panic-halt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"], optional = true }
embassy-net = { version = "0.7.1", features = [
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
    "proto-ipv6",
] }
embassy-usb = { version = "0.5.1" }
static_cell = "2.1.1"
heapless = { version = "0.8.0", default-features = false }
embedded-io-async = "0.7.0"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.3.0"
# max31856 = { git = "https://github.com/idheepan/max31856-rs.git", branch = "master" }


[[bin]]
name = "ThermoSoft-rs"
test = false
bench = false

[profile.dev]
debug = 2
lto = true
opt-level = "z"
incremental = true

[profile.release]
debug = false
lto = true
opt-level = "z"
incremental = true

[features]
defmt = ["dep:defmt"]
defmt-rtt = ["dep:defmt-rtt"]
panic-probe = ["dep:panic-probe"]
default = ["debug"]
debug = [
    "defmt",
    "defmt-rtt",
    "panic-probe",
    "embassy-executor/defmt",
    "embassy-sync/defmt",
    "embassy-futures/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
    "embassy-stm32/defmt",
    "embassy-net/defmt",
    "embassy-usb/defmt",
]

[lib]
test = false